 LogManager.Error: fix to not drop exception
 Deploy solutions with 14/15 compatibility if specified: new CompatibilityDeployer.cs
 Fix compilation on SP2007
 Implement all string CompatibilityLevels currently documented for Install-SPSolution
  (add AllVersions, Old, OldVersion, New, and NewVersion)
 Release 1.2.8.0

2015-09-08, Perry
 Fix InstallConfiguration.FeatureId to return empty list instead of null
  when no features specified
 Release 1.2.10.0

2016-02-03, Perry
 Improve getting web application list; protected access to Solution.DeployedWebApplications
  and improve reporting when falling back to enumerating all webapps

2016-02-04, Perry
 Release 1.2.12.0

2016-02-10, Perry
 Display version numbers in upgrade form title

2016-02-10, Perry
 Release 1.2.14.0

2016-03-11, Perry
 InstallerForm_Load: Don't try to load "None" logo image
 Test that SPFarm.Local is accessible early, & bail with msgbox if not
 Add solution version info above system checks
 Move solution version info into panel at bottom so always visible
 Add checkboxes for user to choose deactivate & activate
   in Upgrade/Remove and in Repair/Remove cases
 Show location summary info in repair & upgrade forms

2016-03-14, Perry
 Fix Microsoft.SharePoint.dll reference to point to installed & get rid of copy
 Delete unused folders BuildProcessTemplates & "Development V2"

2016-03-20, Perry
 Add distribution readme.html to Development source
 Add howto_release.txt to Development source
 Delete obsolete file Development/SharePoint Solution Installer.vssscc
 Delete SP2013-specific files (from this SP2007 branch)
   CodePlex.SharePointInstaller 2013.csproj & SharePoint Solution Installer 2013.sln
 Delete obsolete file Development/Source/CodePlex.SharePointInstaller.csproj.vspscc
 Release 1.4.0.0
 Update AssemblyCompany with latest relevant git commit hash
 Fix App.config

2016-04-24, Perry Rapp
 Change InstallConfiguration.FeatureId from List to ReadOnlyCollection